src/components/UserMenu/UserMenu.module.css
.userContainer {
  background-color: #f0f1f3;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  display: flex;
}

.button {
  border: none;
  background-color: transparent;
  margin: 10px;
  padding: 5px;
}

.userContainer > .button:last-child {
  cursor: pointer;
  z-index: 1000;
}

.active {
  color: black;
  font-weight: bold;
}

.button {
  font-family: Verdana;
  font-weight: 700;
  font-size: 14px;
  line-height: 100%;
  letter-spacing: 4%;
  color: #9b9faa;
}

@media screen and (min-width: 768px) {
  .userContainer {
    background-color: transparent;
  }
}

.active {
  color: black;
  font-weight: bold;
}

